# namadajuno

./: .gitignore  Cargo.toml  Makefile
config/: config.yaml.sample
hasura/: config.yaml
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/namadajuno/tables/: public_block.yaml  public_message.yaml  public_pre_commit.yaml  public_proposal.yaml  public_proposal_tally_result.yaml  public_proposal_vote.yaml  public_transaction.yaml  public_validator.yaml  public_validator_commission.yaml  public_validator_description.yaml  public_validator_info.yaml  public_validator_status.yaml  public_validator_voting_power.yaml  tables.yaml
src/: config.rs  error.rs  main.rs  node.rs  utils.rs  worker.rs
src/database/: block.rs  consensus.rs  gov.rs  message.rs  mod.rs  pre_commmit.rs  schema.sql  tx.rs  validator.rs
src/database/schema/: 00-basic.sql  03-staking.sql  04-consensus.sql  08-gov.sql
src/modules/: consensus.rs  gov.rs  mod.rs  staking.rs
