[package]
name = "namadajuno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8", default-features = false}
rand_core = {version = "0.6", default-features = false}
serde_json = "1.0.113"
sha2 = "0.10.8"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
namada_sdk = { git = "https://github.com/anoma/namada", rev = "v0.31.0" }
ureq = "2.9.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
serde_yaml = "0.9.31"
serde = "1.0.196"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "json",
    "offline",
    "migrate",
    "chrono",
] }
chrono = "0.4.34"
async-channel = "2.2.0"
subtle-encoding = "0.5.1"
